# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-step-handlers-core"
version = "0.1.0"
description = "Core step handlers for Hegemony (CLI, evidence, containers, flows, IOS-XE upgrades)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.0",
    "httpx>=0.27.0",
]

[project.entry-points."hegemony.step_handlers"]
core = "hegemony_step_handlers_core:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_step_handlers_core"
module-root = "src"
