# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-steps-cisco-iosxe"
version = "0.1.5"
description = "Cisco IOS-XE upgrade workflow step handlers for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.5",
    "httpx>=0.27.0",
]

[project.entry-points."hegemony.step_handlers"]
"cisco.iosxe" = "hegemony_steps_cisco_iosxe:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_steps_cisco_iosxe"
module-root = "src"
