# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-steps-monitor"
version = "0.1.4"
description = "Background connectivity-monitor step handlers for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.4",
]

[project.entry-points."hegemony.step_handlers"]
"monitor" = "hegemony_steps_monitor:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_steps_monitor"
module-root = "src"
