# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-steps-shell"
version = "0.1.4"
description = "Remote shell execution step handlers for Hegemony (Linux/Unix hosts; WinRM planned)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.4",
]

[project.entry-points."hegemony.step_handlers"]
shell = "hegemony_steps_shell:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_steps_shell"
module-root = "src"
