# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-probe-net"
version = "0.1.4"
description = "Network reachability probes (tcp/icmp/http/dns) for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.4",
    "httpx>=0.27.0",
]

[project.entry-points."hegemony.probes"]
"net" = "hegemony_probe_net:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_probe_net"
module-root = "src"
