# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-transport-asyncssh"
version = "0.1.5"
description = "AsyncSSH exec-channel device transport for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.5",
    "asyncssh>=2.23.0",
]

[project.entry-points."hegemony.device_transports"]
"asyncssh" = "hegemony_transport_asyncssh:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_transport_asyncssh"
module-root = "src"
