# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-transport-netmiko"
version = "0.1.5"
description = "Netmiko network-CLI device transport for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.5",
    "netmiko>=4.3.0",
]

[project.entry-points."hegemony.device_transports"]
"netmiko" = "hegemony_transport_netmiko:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_transport_netmiko"
module-root = "src"
