# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-transport-scrapli"
version = "0.1.6"
description = "Scrapli network-CLI device transport for Hegemony"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-step-sdk==0.1.6",
    # asyncssh extra: already the platform's SSH library. The default "system"
    # transport shells out to a local ssh binary (not in worker images), and the
    # paramiko extra caps paramiko <4 for the whole install.
    "scrapli[asyncssh]>=2024.7.30",
]

[project.entry-points."hegemony.device_transports"]
"scrapli" = "hegemony_transport_scrapli:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_transport_scrapli"
module-root = "src"
